@@ -1,3 +1,8 @@
+2011-01-20 Jerome Pasquier  <rainbru@free.fr>
+
+	* src/ogreGui/DrawableTest: Ported from CppUnit to Boost.Test.
+	* src/ogreGui/BrushTest: Ported from CppUnit to Boost.Test.
+
 2011-01-08 Jerome Pasquier  <rainbru@free.fr>
 
 	* src/ogreGui/Makefile.am: individual-test-fontmanager target created.
